fixing navbar flicker

--- a/frontend/src/components/Navbar/css/navbar.scss
+++ b/frontend/src/components/Navbar/css/navbar.scss
@@ -35,11 +35,11 @@
   z-index: 20;
 
   &--hidden {
-    visibility: hidden;
+    display: none;
   }
 
   &--visible {
-    visibility: visible;
+    display: flex;
   }
 
   &__title {
